# hextool

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml
Hextool/: hextool.py  run.py
